css/style.css
/* custom css rules */

body {
	font-family: 'Raleway', sans-serif;
	overflow-x: hidden;
	font-family: Tahoma;
	/*background-color: black;*/
}

button {
	background-color: #171738;
	border-radius: 10px;
	border: 5px solid #FFD9CE;
	color:#FFD9CE;
}

.selector {
	display: flex;
	flex-flow: row;
	flex-direction: row;
	align-items: center;
	justify-content: flex-end;
	color: #FFD9CE !important;
	width: 100vw;
	transform: translateY(20px);
	height: fit-content;
}

select {
	display: grid;
	background-color: #171738;
	color: #FFD9CE;
	height: 40px;
	border: #FFD9CE 3px solid;
	border-radius: 3px;
}

.nav {
	display: grid;
	grid-template-columns: 100px 100px;
	justify-content: center;
}

.next {
	width: 100px;
	height: 40px;
	margin-left: 10px;
}

.prev {
	width: 100px;
	height: 40px;
	margin-right: 10px;
}

.prev-last {
	width: 200px;
	height: 40px;
}

.next-message {
	position: absolute;
	width: 70px;
	height: 40px;
	transform: translate(4vw, 43vh);
}

.prev-message {
	position: absolute;
	width: 100px;
	height: 40px;
	transform: translate(-4vw, 43vh);
}

.intro {
	color: #FFD9CE;
	margin-top: 30px;
}

.intro-container {
	max-width: 700px;
	margin-top: 20px;
}

.intro-slide {
	background-image: url('../Images/background.png');
	background-repeat:no-repeat;
	background-size: cover;
	background-position: center;
}

.chordToolTipInfo {
	margin: 0;
}

.bubbleToolTipInfo {
	margin: 0;
}

#bubble-select {
	width: 11%;
	margin-top: 20px;
	margin-bottom: 0;
	margin-left: 850px;
}

text {
	fill: white;
}

.slide {
	background-color: #171738;
	height: 100vh;
	min-height: 700px;
	width: auto;
	justify-content: center;
	text-align: center;
	padding: 0;
}

.filler {
	background-color: #171738;
	height: 300px;
}

#button-container {
	position: fixed;
}

#down {
	position: absolute;
}


#hist-title {
	margin-top: 20px;
	margin-bottom: 30px;
	font-family: Tahoma;
	color: white;
	font-size: 30px;
	align-self: center;
}
#yearRange {
	width: 70%; /* Adjust the width as needed */
	 /* Add margin for spacing */
	margin-right: 100px ;
	appearance: none; /* Remove default appearance */
	background: #d3d3d3; /* Set the background color */
	height: 10px; /* Set the height */
	border-radius: 5px; /* Add rounded corners */
}

#yearRange::-webkit-slider-thumb {
	appearance: none; /* Remove default appearance */
	width: 20px; /* Set the width of the thumb */
	height: 20px; /* Set the height of the thumb */
	background: #C5D86D; /* Set the color of the thumb */
	border-radius: 50%; /* Make it a circle */
	cursor: pointer; /* Add a pointer cursor */
}
.slider-label {
	position: absolute;
	padding: 5px; /* Add padding for space around the text */
	background-color: #C5D86D; /* Set the background color of the label */
	border: 1px solid darkgreen; /* Add a border to the label */
	border-radius: 5px;
}

#sliderContainer {
	padding-top: 5%;
}
#minLabel {
	left: 70%; /* Adjust the left value as needed */
}
#maxLabel {
	right: 10%;
}

#summaryStats {
	padding: 10px;
	border: 3px solid #FFD9CE;
	width: 350px;
	height: 300px;
	background-color: #FFD9CE;
}

#summaryStats {
	padding: 10px;
	border: 3px solid #FFD9CE;;
	width: 350px;
	height: 300px;
	background-color: #FFD9CE;
}

#inter-container{
	padding-bottom: 200px;
}

#sumtitle {
	margin-top: 10px;
	margin-bottom: 20px;
	color: #593C8F;
}

.sumlines {
	color: #593C8F;
}


#message-title{
	font-weight: bold;
	font-size: 30px;
	margin-bottom: 30px;
}

#message-container {
	padding-top: 50px;
	color: white;
	--border-size: 3px;
	--border-angle: 0turn;
	height: 60vmin;
	background-image: conic-gradient(
			from var(--border-angle),
			#112,
			#112 50%,
			#112
	),
	conic-gradient(from var(--border-angle), transparent 20%, #F46036, #C5D86D);
	background-size: calc(100% - (var(--border-size) * 2))
	calc(100% - (var(--border-size) * 2)),
	cover;
	background-position: center center;
	background-repeat: no-repeat;

	animation: bg-spin 3s linear infinite;
	@keyframes bg-spin {
		to {
			--border-angle: 1turn;
		}
	}

	&:hover {
		animation-play-state: paused;
	}
}

@property --border-angle {
	syntax: "<angle>";
	inherits: true;
	initial-value: 0turn;
}

/* CloserLookVis */
#closer-look-container {
	display: grid;
}

#info-box {
	text-align: center;
	align-items: center;
	justify-content: center;
	color: white;
	width: 560px;
	height: 450px;
}

#info {
	display: flex;
	flex-direction: row;
	width: 560px;
	padding: 20px;
	margin-left: 10px;
}

#closer-look-title {
	color: white;
	font-size: 30px;
	/*margin-left: 20px;*/
}

#attributes {
	margin-left: 40px;
	display: flex;
	flex-direction: row;
	max-width: 200px;
	flex-wrap: wrap;
}

#album-title {
	color: white;
	margin-bottom: 20px;
	font-size: 20px;
}

.album-info {
	display: block;
	color: white;
	margin-top: 45px;
	margin-bottom: 0px;
}
.genre-button{
	border-radius: 50%;
	padding: 30px;
	margin-right: 30px;
}
.genre-button:hover{
	background-color: #FFD9CE;
	color: #171738;
}
#select-genre{
	padding-top: 300px;
}
.prev-genre{
	position: absolute;
	width: 100px;
	height: 40px;
	transform: translate(-42vw, 3vh);
}

